# AlgorithmVisualizer

./: CMakeLists.txt  README.md
include/common/: RandomGenerator.h
include/engine/: AlgorithmEngine.h  BubbleSortEngine.h
include/ui/: AlgorithmWidget.h  HomePage.h  MainWindow.h  SortingWidget.h
include/utils/: MemoryUtils.h  RandomGenerator.h
src/: main.cpp
src/common/: RandomGenerator.cpp
src/engine/: BubbleSortEngine.cpp
src/ui/: AlgorithmWidget.cpp  HomePage.cpp  MainWindow.cpp  SortingWidget.cpp
src/utils/: RandomGenerator.cpp
